# wizzair-aycf-predictor

./: .env.example  .gitignore  README.md  backtest.py  config.py  database.py  fill.py  helpers.py  optimize.py  predict.py  pyproject.toml  train.py
.github/workflows/: daily.yml  step-fill.yml  step-predict.yml  step-train.yml  train.yml
.github/workflows/steps/: fill.yml  predict.yml  train.yml
data/: evaluation.py  predict.py  split.py  training.py
domain/: availabilities.py  financials.py
features/: __init__.py  airports.py  availabilities.py  country_codes.py  encoding.py  financial.py  generate.py  holidays.py  mapping.py
source/: availabilities.py  financials.py  holidays.py
storage/: availabilities.py  database.py  financials.py  holidays.py  predictions.py  s3.py
ui/: app.py  utils.py  views.py
