[project]
name = "wizzair-aycf-predictor"
version = "0.1.0"
description = "AYCF Predictor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.3.1",
    "holidays>=0.65",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "xgboost>=3.1.2",
]
